src/test/ui/stability-attribute/stability-attribute-issue-43027.stderr
error: This node does not have a stability attribute
  --> $DIR/stability-attribute-issue-43027.rs:15:23
   |
LL | pub struct Reverse<T>(pub T); //~ ERROR This node does not have a stability attribute
   |                       ^^^^^

error: aborting due to previous error

